--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
 android:id="@+id/ScrollView01"
 android:layout_width="match_parent"
@@ -15,16 +14,13 @@ android:scrollbars="none" >
         android:layout_height="wrap_content"
        android:padding="5dp">
 
-
-
         <View
             android:id="@+id/First"
             android:layout_width="match_parent"
             android:layout_height="150dp"
-            android:background="@color/black"
-            android:layout_marginBottom="5dp"
-
-
+            android:backgroundTint="@color/black"
+            android:background="@drawable/items"
+            android:layout_marginBottom="10dp"
             />
 
         <View
@@ -32,9 +28,9 @@ android:scrollbars="none" >
             android:layout_width="match_parent"
             android:layout_height="90dp"
             android:layout_below="@id/First"
-            android:background="#7FFF00"
-            android:layout_marginBottom="5dp"
-
+            android:background="@drawable/items"
+            android:backgroundTint="@color/green"
+            android:layout_marginBottom="10dp"
 
             />
 
@@ -43,9 +39,9 @@ android:scrollbars="none" >
             android:layout_width="match_parent"
             android:layout_height="180dp"
             android:layout_below="@id/Second"
-            android:background="@color/teal_200"
-            android:layout_marginBottom="5dp"
-
+            android:background="@drawable/items"
+            android:backgroundTint="@color/silver"
+            android:layout_marginBottom="10dp"
 
             />
 
@@ -54,8 +50,9 @@ android:scrollbars="none" >
             android:layout_width="match_parent"
             android:layout_height="210dp"
             android:layout_below="@id/Third"
-            android:background="@color/purple_700"
-            android:layout_marginBottom="5dp"
+            android:background="@drawable/items"
+            android:backgroundTint="@color/olive"
+            android:layout_marginBottom="10dp"
 
 
             />
@@ -66,8 +63,8 @@ android:scrollbars="none" >
             android:layout_height="301dp"
             android:layout_below="@id/Forth"
             android:layout_marginBottom="7dp"
-
-            android:background="#FFFF00" />
+            android:backgroundTint="@color/blue"
+            android:background="@drawable/items" />
 
 
     </RelativeLayout>
